--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: true  # Stop all jobs if one fails
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -36,14 +36,14 @@ jobs:
       run: |
         pytest tests/ --cov=src/ --cov-report=xml --cov-report=html --junitxml=test-results.xml
         
-    - name: Upload test results
-      if: always()  # Run even if tests fail
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results-${{ matrix.python-version }}
-        path: |
-          calculator-project/test-results.xml
-          calculator-project/htmlcov
+    # - name: Upload test results
+    #   if: always()  # Run even if tests fail
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: test-results-${{ matrix.python-version }}
+    #     path: |
+    #       calculator-project/test-results.xml
+    #       calculator-project/htmlcov
           
     - name: Check coverage threshold
       working-directory: ./calculator-project
