--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Run tests with pytest
       working-directory: ./calculator-project
       run: |
+        export PYTHONPATH=$(pwd)
         pytest tests/ --cov=src/ --cov-report=xml --cov-report=html --junitxml=test-results.xml
         
     # - name: Upload test results
