fix: added sonar org

--- a/calculator-project/sonar-project.properties
+++ b/calculator-project/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=calculator-project
 sonar.projectName=Python Calculator
-
+sonar.organization=sva15
 # Source and test directories
 sonar.sources=calculator-project/src
 sonar.tests=calculator-project/tests
