fix: resolved src,test dir

--- a/calculator-project/sonar-project.properties
+++ b/calculator-project/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=calculator-project
 sonar.projectName=Python Calculator
 sonar.organization=sva15
 # Source and test directories
-sonar.sources=calculator-project/src
-sonar.tests=calculator-project/tests
+sonar.sources=src
+sonar.tests=tests
 
 # Python version
 sonar.python.version=3.8,3.9,3.10,3.11,3.12
