add coverage report

--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -36,6 +36,14 @@ jobs:
       run: |
         export PYTHONPATH=$(pwd)
         pytest tests/ --cov=src/ --cov-report=xml --cov-report=html --junitxml=test-results.xml
+
+    - name: Add coverage report to step summary
+      working-directory: ./calculator-project
+      run: |
+        echo "## Python Coverage Report" >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
+        coverage report >> $GITHUB_STEP_SUMMARY
+        echo '```' >> $GITHUB_STEP_SUMMARY
         
     # - name: Upload test results
     #   if: always()  # Run even if tests fail
