--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -44,13 +44,13 @@ jobs:
         coverage report > coverage.txt
         coverage xml
 
-    - name: Publish Unit Test Results
-      uses: dorny/test-reporter@v1
-      if: always()
-      with:
-        name: Python Unit Tests Report
-        path: calculator-project/test-results.xml
-        reporter: jest-junit
+    # - name: Publish Unit Test Results
+    #   uses: dorny/test-reporter@v1
+    #   if: always()
+    #   with:
+    #     name: Python Unit Tests Report
+    #     path: calculator-project/test-results.xml
+    #     reporter: jest-junit
 
     - name: Add coverage report to step summary
       working-directory: ./calculator-project
