--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -2,7 +2,7 @@ name: Python Unit Tests
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main","develop" ]
   pull_request:
     branches: [ "main" ]
 
