--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -78,7 +78,7 @@ jobs:
       if: github.ref == 'refs/heads/main'
       uses: SonarSource/sonarqube-scan-action@v5
       with:
-        projectBaseDir: .
+        projectBaseDir: ./calculator-project
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
@@ -88,7 +88,7 @@ jobs:
       uses: sonarsource/sonarqube-quality-gate-action@master
       with:
         pollingTimeoutSec: 600
-        projectBaseDir: .
+        projectBaseDir: ./calculator-project
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
