--- a/.github/workflows/python-unit-tests.yml
+++ b/.github/workflows/python-unit-tests.yml
@@ -81,6 +81,14 @@ jobs:
         projectBaseDir: ./calculator-project
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    
+    - name: Publish Code Coverage Report
+      if: github.ref == 'refs/heads/main'
+      uses: dorny/test-reporter@v1
+      with:
+        name: Code Coverage Report
+        path: ./calculator-project/coverage.xml
+        reporter: cobertura
 
     - name: SonarQube Quality Gate check
       if: github.ref == 'refs/heads/main'
@@ -92,7 +100,7 @@ jobs:
        #scanMetadataReportFile: ./calculator-project/.scannerwork/report-task.txt
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+    
     - name: "Show SonarQube Quality Gate Status value"
       if: github.ref == 'refs/heads/main'
       run: echo "The Quality Gate status is ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
