--- a/backend/services/user_service/Dockerfile
+++ b/backend/services/user_service/Dockerfile
@@ -28,4 +28,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8080/health || exit 1
 
 # Run the application
-CMD ["python", "-m", "functions_framework", "--target=gcp_handler", "--port=8080"]
+CMD ["python", "server.py"]
