--- a/ui/angular.json
+++ b/ui/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mono-repo-ui": {
+    "cloudsync-platform": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
