--- a/ui/angular.json
+++ b/ui/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mono-repo-ui",
+            "outputPath": "dist/cloudsync-platform",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
