--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,113 +203,85 @@ jobs:
       run: |
         echo "Running code quality checks for ${{ matrix.directory }}"
         
-        # Initialize summary
-        echo "## 🔍 Code Quality Report for \`${{ matrix.directory }}\`" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
         # Format check with black
         echo "Checking code formatting..."
         if black --check "${{ matrix.directory }}" 2>&1; then
-          echo "✅ **Code Formatting**: PASSED" >> $GITHUB_STEP_SUMMARY
           BLACK_STATUS="✅ PASSED"
         else
-          echo "❌ **Code Formatting**: FAILED" >> $GITHUB_STEP_SUMMARY
           BLACK_STATUS="❌ FAILED"
         fi
         
         # Import sorting check
         echo "Checking import sorting..."
         if isort --check-only "${{ matrix.directory }}" 2>&1; then
-          echo "✅ **Import Sorting**: PASSED" >> $GITHUB_STEP_SUMMARY
           ISORT_STATUS="✅ PASSED"
         else
-          echo "❌ **Import Sorting**: FAILED" >> $GITHUB_STEP_SUMMARY
           ISORT_STATUS="❌ FAILED"
         fi
         
         # Linting with flake8
         echo "Running linter..."
         if flake8 "${{ matrix.directory }}" --format='%(path)s:%(row)d:%(col)d: %(code)s %(text)s' 2>&1; then
-          echo "✅ **Linting (flake8)**: PASSED" >> $GITHUB_STEP_SUMMARY
           FLAKE8_STATUS="✅ PASSED"
         else
-          echo "❌ **Linting (flake8)**: FAILED" >> $GITHUB_STEP_SUMMARY
           FLAKE8_STATUS="❌ FAILED"
         fi
         
         # Type checking with mypy
         echo "Running type checker..."
         if mypy "${{ matrix.directory }}" 2>&1; then
-          echo "✅ **Type Checking (mypy)**: PASSED" >> $GITHUB_STEP_SUMMARY
           MYPY_STATUS="✅ PASSED"
         else
-          echo "❌ **Type Checking (mypy)**: FAILED" >> $GITHUB_STEP_SUMMARY
           MYPY_STATUS="❌ FAILED"
         fi
         
-        # Add summary table
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "| Check | Status |" >> $GITHUB_STEP_SUMMARY
-        echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
-        echo "| Code Formatting (black) | $BLACK_STATUS |" >> $GITHUB_STEP_SUMMARY
-        echo "| Import Sorting (isort) | $ISORT_STATUS |" >> $GITHUB_STEP_SUMMARY
-        echo "| Linting (flake8) | $FLAKE8_STATUS |" >> $GITHUB_STEP_SUMMARY
-        echo "| Type Checking (mypy) | $MYPY_STATUS |" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
+        # Store results for summary
+        echo "BLACK_STATUS=$BLACK_STATUS" >> $GITHUB_ENV
+        echo "ISORT_STATUS=$ISORT_STATUS" >> $GITHUB_ENV
+        echo "FLAKE8_STATUS=$FLAKE8_STATUS" >> $GITHUB_ENV
+        echo "MYPY_STATUS=$MYPY_STATUS" >> $GITHUB_ENV
     
     - name: Run tests
       run: |
         echo "Running tests for ${{ matrix.directory }}"
         
-        # Add test section to summary
-        echo "## 🧪 Test Results for \`${{ matrix.directory }}\`" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
         # Run pytest with coverage
         if [ -d "${{ matrix.directory }}/tests" ]; then
-          echo "📁 Found tests directory: \`${{ matrix.directory }}/tests\`" >> $GITHUB_STEP_SUMMARY
           if pytest "${{ matrix.directory }}/tests" \
             --cov="${{ matrix.directory }}" \
-            --cov-report=term-missing \
+            --cov-branch \
             --cov-report=xml:coverage-${{ matrix.directory }}.xml \
-            --cov-report=html:htmlcov-${{ matrix.directory }} \
-            --junit-xml=test-results-${{ matrix.directory }}.xml \
+            --cov-report=term-missing \
             -v 2>&1; then
-            echo "✅ **Tests**: PASSED" >> $GITHUB_STEP_SUMMARY
-            TEST_STATUS="✅ PASSED"
+            TEST_STATUS="PASSED"
           else
-            echo "❌ **Tests**: FAILED" >> $GITHUB_STEP_SUMMARY
-            TEST_STATUS="❌ FAILED"
+            TEST_STATUS="FAILED"
           fi
         else
-          echo "📁 No tests directory found, searching for test files..." >> $GITHUB_STEP_SUMMARY
           if find "${{ matrix.directory }}" -name "test_*.py" -o -name "*_test.py" | grep -q .; then
-            echo "📄 Found individual test files" >> $GITHUB_STEP_SUMMARY
             if pytest "${{ matrix.directory }}" \
               --cov="${{ matrix.directory }}" \
-              --cov-report=term-missing \
+              --cov-branch \
               --cov-report=xml:coverage-${{ matrix.directory }}.xml \
-              --cov-report=html:htmlcov-${{ matrix.directory }} \
-              --junit-xml=test-results-${{ matrix.directory }}.xml \
+              --cov-report=term-missing \
               -v 2>&1; then
-              echo "✅ **Tests**: PASSED" >> $GITHUB_STEP_SUMMARY
-              TEST_STATUS="✅ PASSED"
+              TEST_STATUS="PASSED"
             else
-              echo "❌ **Tests**: FAILED" >> $GITHUB_STEP_SUMMARY
-              TEST_STATUS="❌ FAILED"
+              TEST_STATUS="FAILED"
             fi
           else
-            echo "⚠️ **Tests**: NO TESTS FOUND" >> $GITHUB_STEP_SUMMARY
-            TEST_STATUS="⚠️ NO TESTS"
+            TEST_STATUS="NO_TESTS"
           fi
         fi
         
-    - name: Parse and display coverage
+        # Store test status for summary
+        echo "TEST_STATUS=$TEST_STATUS" >> $GITHUB_ENV
+        
+    - name: Generate summary report
       if: always()
       run: |
-        # Parse coverage from XML and add to summary
+        # Parse coverage from XML
         if [ -f "coverage-${{ matrix.directory }}.xml" ]; then
-          # Extract coverage percentage from XML
           COVERAGE=$(python3 -c "
         import xml.etree.ElementTree as ET
         try:
@@ -321,50 +293,31 @@ jobs:
         except:
             print('0.0')
         ")
-          
-          echo "## 📊 Coverage Report for \`${{ matrix.directory }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          # Coverage badge color based on percentage
-          if (( $(echo "$COVERAGE >= 80" | bc -l) )); then
-            COVERAGE_COLOR="🟢"
-            COVERAGE_STATUS="Excellent"
-          elif (( $(echo "$COVERAGE >= 60" | bc -l) )); then
-            COVERAGE_COLOR="🟡"
-            COVERAGE_STATUS="Good"
-          elif (( $(echo "$COVERAGE >= 40" | bc -l) )); then
-            COVERAGE_COLOR="🟠"
-            COVERAGE_STATUS="Fair"
-          else
-            COVERAGE_COLOR="🔴"
-            COVERAGE_STATUS="Poor"
-          fi
-          
-          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Coverage | $COVERAGE_COLOR **${COVERAGE}%** ($COVERAGE_STATUS) |" >> $GITHUB_STEP_SUMMARY
-          echo "| Status | $TEST_STATUS |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          # Add coverage details if available
-          if [ -f "htmlcov-${{ matrix.directory }}/index.html" ]; then
-            echo "📋 **Detailed coverage report generated**: \`htmlcov-${{ matrix.directory }}/index.html\`" >> $GITHUB_STEP_SUMMARY
-          fi
         else
-          echo "## 📊 Coverage Report for \`${{ matrix.directory }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "⚠️ No coverage data available" >> $GITHUB_STEP_SUMMARY
+          COVERAGE="N/A"
         fi
+        
+        # Generate professional summary table
+        echo "## Test Results: \`${{ matrix.directory }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "| Check | Status | Coverage |" >> $GITHUB_STEP_SUMMARY
+        echo "|-------|--------|----------|" >> $GITHUB_STEP_SUMMARY
+        echo "| Code Formatting | $BLACK_STATUS | - |" >> $GITHUB_STEP_SUMMARY
+        echo "| Import Sorting | $ISORT_STATUS | - |" >> $GITHUB_STEP_SUMMARY
+        echo "| Linting | $FLAKE8_STATUS | - |" >> $GITHUB_STEP_SUMMARY
+        echo "| Type Checking | $MYPY_STATUS | - |" >> $GITHUB_STEP_SUMMARY
+        echo "| Unit Tests | $TEST_STATUS | ${COVERAGE}% |" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
     
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
       if: always()
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage-${{ matrix.directory }}.xml
         flags: ${{ matrix.directory }}
         name: coverage-${{ matrix.directory }}
-    
+
 
   ui-job:
     needs: detect-changes
